ext/opencv/gstpyramidsegment.h
@@ -49,6 +49,10 @@
 #include <gst/gst.h>
 #include <cv.h>
 
+#if CV_MAJOR_VERSION * 100 + CV_MINOR_VERSION >= 204
+#include <opencv2/legacy/legacy.hpp>
+#endif
+
 G_BEGIN_DECLS
 /* #defines don't like whitespacey bits */
 #define GST_TYPE_PYRAMID_SEGMENT \
